# Wooden-Compass

./: .gitignore  CMakeLists.txt  README.md
WoodenCompass/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  main.cpp  tools.h
WoodenCompass/Classes/: AppDelegate.cpp  AppDelegate.h  Application-linux.cpp  Application-linux.h  HelloWorldScene.cpp  HelloWorldScene.h
WoodenCompass/Resources/: MainWindow.qrc  MainWindow.ui
mvc/: CMakeLists.txt
mvc/include/mvc/: DataSink.h  DataSource.h
mvc/src/: DataSink.cpp  DataSource.cpp
mvc/tests/: tests.cpp
